--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,33 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LookupServices":{
+    "SQLLookupService":{
+      "connectionString":"Data Source=aui-prd-sql.database.windows.net;Initial Catalog=Lookups;User Id=ITP.DAL;Password=myOffice7452;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False",
+      "providerName":"System.Data.SqlClient"
+    }
+  },
+  "RatingServices":{
+    "Archimedes":{
+      "modules":[
+        "json", "datatime", "sys", "clr"
+      ],
+      "extensions_directory":"[WELLKNOWNPATH]\\extensions",
+      "extensions":[
+          {
+            "name":"Rating Extensions",
+            "extension_binary":"Extender.dll",
+            "import_lib":"Extender",
+            "imports":[
+              "FileExtender", "LookupExtender"
+            ]
+          }
+      ],
+      "repo":{
+        "connection_string":"Server=tcp:fortuity-dev.database.windows.net,1433;Initial Catalog=fortuity-dev-sql;Persist Security Info=False;User ID=fortuity_admin;Password=4tuneFavorsthebold;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      }
+    }
+
+  }
 }
