--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
   "LookupServices":{
     "SQLLookupService":{
-      "connectionString":"Data Source=aui-prd-sql.database.windows.net;Initial Catalog=Lookups;User Id=ITP.DAL;Password=myOffice7452;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False",
+      "connectionString":"
       "providerName":"System.Data.SqlClient"
     }
   },
@@ -28,7 +28,7 @@
           }
       ],
       "repo":{
-        "connection_string":"Server=tcp:fortuity-dev.database.windows.net,1433;Initial Catalog=fortuity-dev-sql;Persist Security Info=False;User ID=fortuity_admin;Password=4tuneFavorsthebold;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "connection_string":"
       }
     }
 
